@@ -32,6 +32,9 @@
   - `is_zero?/1` - does fraction represent zero?
   - `add/3` - Add two fractions, or a fraction and an integer
   - `subtract/3` - Subtract two fractions, or a fraction and an integer
+  - `String.Chars` - Fractions now work properly with IO functions
+  - `multiply/3` - Multiply two fractions, or a fraction and an integer
+  - `reciprocal/2` - Take the reciprocal of a fraction
 
  - `Chunky.Grid` module for working with two dimensional data
   - `Grid.new/3` - generate a grid from a value or a function
